# Polaris2D

./: CMakeLists.txt  README.md
core/header/utils/: math.h
core/src/: main.cpp
core/src/utils/: math.cpp
